[project]
name = "doss-node-suite"
version = "0.1.0"
description = "Public ComfyUI nodes for James Doss AI tutorials."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "James Doss" }
]
dependencies = []

[project.urls]
Homepage = "https://github.com/"
Documentation = "https://github.com/"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py310"
