[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "doss-node-suite"
version = "0.3.1"
description = "Custom ComfyUI node pack for Doss Node Suite, shipping practical image comparison, save, and workflow timing nodes."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
    { name = "James Doss AI" },
]
keywords = [
    "comfyui",
    "custom-nodes",
    "image-generation",
    "workflow-utilities",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8",
]

[project.urls]
Repository = "https://github.com/JamesDanielDoss/Doss-Node-Suite"
Issues = "https://github.com/JamesDanielDoss/Doss-Node-Suite/issues"

[tool.comfy]
PublisherId = "jamesdossai"
DisplayName = "Doss Node Suite"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
